Added CDN links to main.hbs.

--- a/app/views/layouts/main.hbs
+++ b/app/views/layouts/main.hbs
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>NPR Scraper</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 </head>
 
 <body>
     {{{ body }}}
+    <script src="jquery-3.4.1.min.js"></script>
 </body>
 
 </html>
