Articles not displaying on index.hbs.

--- a/app/views/layouts/main.hbs
+++ b/app/views/layouts/main.hbs
@@ -1,17 +1,22 @@
-<html lang="en">
+<html lang='en'>
+
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset='UTF-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <meta http-equiv='X-UA-Compatible' content='ie=edge'>
     <title>NPR Scraper</title>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css'>
+    <link type='text/html' rel='stylesheet' href= '../../public/css/style.css'>
 </head>
+
 
 <body>
     {{{ body }}}
-    <script src="jquery-3.4.1.min.js"></script>
+    <script src='jquery-3.4.1.min.js'></script>
+    <script src='../../public/js/app.js'></script>
 </body>
+
 
 </html>
