--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -1,1 +1,48 @@
-<div>Testing</div>
+<style>
+  body {
+    background-color: grey
+  }
+
+  #wrapper {
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 5%;
+  }
+
+  #articles {
+    display: inline-block;
+    overflow: auto;
+    width: 60%;
+    height: 700px;
+  }
+
+  #notes {
+    float: right;
+    width: 30%;
+  }
+
+  textarea,
+  input {
+    display: block;
+    width: 100%;
+    background-color: white;
+  }
+
+  input {
+    height: 36px;
+    font-size: 24px;
+  }
+
+  textarea {
+    height: 200px;
+    font-size: 18px;
+  }
+</style>
+
+
+<div id='wrapper'>
+  <h1>NPR Scraper</h1>
+  <div id='articles'></div>
+  <div id='notes'></div>
+</div>
