--- a/app/views/layouts/main.hbs
+++ b/app/views/layouts/main.hbs
@@ -8,14 +8,15 @@
     <title>NPR Scraper</title>
     <!-- Latest compiled and minified CSS -->
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css'>
-    <link type='text/html' rel='stylesheet' href= '../../public/css/style.css'>
+    <link type='text/html' rel='stylesheet' href='../../public/css/style.css'>
 </head>
 
 
 <body>
     {{{ body }}}
-    <script src='jquery-3.4.1.min.js'></script>
-    <script src='../../public/js/app.js'></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src='/js/app.js'></script>
 </body>
 
 
