Added message for heroku.

--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -43,6 +43,7 @@
 
 <div id='wrapper'>
   <h1>NPR Scraper</h1>
+  <h2>Got to url /api/scrape and /api/articles to gain allow articles to display for now.</h2>
   <div id='articles'></div>
   <div id='notes'></div>
 </div>
