Added new heroku message.

--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -43,7 +43,7 @@
 
 <div id='wrapper'>
   <h1>NPR Scraper</h1>
-  <h2>Got to url /api/scrape and /api/articles to gain allow articles to display for now.</h2>
+  <h2>Go to url /api/scrape and /api/articles to gain allow articles to display for now. Until button to scrape is added.</h2>
   <div id='articles'></div>
   <div id='notes'></div>
 </div>
