--- a/app/views/layouts/main.hbs
+++ b/app/views/layouts/main.hbs
@@ -9,6 +9,7 @@
     <!-- Latest compiled and minified CSS -->
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css'>
     <link type='text/html' rel='stylesheet' href='../../public/css/style.css'>
+    {{!-- CSS pathing not displaying properly. Using inline CSS for now. --}}
 </head>
 
 
